New header design

--- a/sass/_core.scss
+++ b/sass/_core.scss
@@ -18,15 +18,8 @@ body {
 	-webkit-text-size-adjust: 100%;
 }
 
-a, a:visited {
-	background: transparent;
-	color: #00aeef;
+a{
 	text-decoration: none;
-}
-
-a:hover {
-	color: #333;
-	background: #DDD;
 }
 
 blockquote {
