--- a/sass/_content.scss
+++ b/sass/_content.scss
@@ -4,8 +4,11 @@
 	margin: 0;
 	padding: 1.25%;
 	width: 60%;
+	a{
+		color: $sgBlue;
+	}
 	&  > h1 {
-		color: #960;
+		color: $sgBlue;
 		font-weight: normal;
 		font-size: 2em;
 		line-height: 1;
@@ -19,6 +22,7 @@
 	}
 	& > h1,
 	h2 {
+		font-family: $fontHeadings;
 		background: transparent;
 		font-size: 300%;
 		letter-spacing: -1px;
