Replaced free spirited theme tags with “allowed” tags per Theme-Check

--- a/style.scss
+++ b/style.scss
@@ -7,7 +7,7 @@
 * License: GNU General Public License
 * Template: tersus
 * License URI: https://raw.github.com/splorp/tersus/master/license.txt
-* Tags: basic, clean, cruftless, naked, simple, simplicity, tersus
+* Tags: blue, white, light, three-columns, right-sidebar, fluid-layout, responsive-layout, post-formats, theme-options, microformats
 */
 
 //	Variables
