Updated and corrected theme information

--- a/style.scss
+++ b/style.scss
@@ -1,9 +1,9 @@
 /*
-* Theme Name: Super Ginormous
+* Theme Name: Super Ginormous for Tersus
 * Theme URI: https://github.com/cdharrison/Super-Ginormous
-* Description: An achingly simple child theme built for Tersus
-* Author: Chris Harrison, Grant Hutchinson, Dan Rubin, Andy van der Raadt
-* Version: 0.2.0 (Development)
+* Description: A child theme for Tersus
+* Author: Chris Harrison
+* Version: 0.0.1
 * License: GNU General Public License
 * Template: tersus
 * License URI: https://raw.github.com/splorp/tersus/master/license.txt
