Added author link

--- a/style.css
+++ b/style.css
@@ -3,9 +3,10 @@
 * Theme URI: https://github.com/cdharrison/Super-Ginormous
 * Description: A child theme for Tersus
 * Author: Chris Harrison
+* Author URI: http://cdharrison.com/
 * Version: 0.0.1
-* License: GNU General Public License
 * Template: tersus
+* License: GNU General Public License
 * License URI: https://raw.github.com/splorp/tersus/master/license.txt
 * Tags: blue, white, light, three-columns, right-sidebar, fluid-layout, responsive-layout, post-formats, theme-options, microformats
 */
